# prefpo

./: .gitignore  README.md  __init__.py  __main__.py  cli.py  config.py  generate.py  ifeval_batch.py  optimize.py  pool.py  progress.py  pyproject.toml  results.py  types.py
data/: bbh.py  ifeval.py  ifeval_hard.py
data/ifeval_hard_data/: eval.json
examples/: bbh.py  bbh_config.yaml  gsm8k.py  ifbench.py  ifeval.py  ifeval_config.yaml  ifeval_hard.py  ifeval_hard_anthropic.py  ifeval_hard_llm_judge.py  judges.py  test_all_anthropic.py  test_anthropic_disc.py  test_anthropic_opt.py  test_multitrial.py
grading/: __init__.py  base.py  binary.py  exact_match.py  ifeval.py  multiple_choice.py
judges/: __init__.py  hack.py  hack_examples.yaml  hygiene.py  hygiene_examples.yaml
llm/: client.py
prompts/: discriminator.py  optimizer.py  variant.py
tests/: test_additional_coverage.py  test_bbh_loader.py  test_cli.py  test_config.py  test_datasets.py  test_extensive_suite.py  test_gap_suite.py  test_generate.py  test_grading.py  test_ifeval_batch.py  test_ifeval_grading.py  test_integration.py  test_judges.py  test_llm_client.py  test_loop.py  test_multi_provider.py  test_optimize.py  test_pool.py  test_prompts.py  test_public_api.py  test_results.py  test_run_id_collision.py  test_types.py
